# tools-one

./: README.md  package-lock.json  package.json  tools-one-prototype.html  tsconfig.json  学生错题分析系统UI设计提示词.md
.github/workflows/: release.yml
scripts/: bump-version.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crypto.rs  lib.rs  main.rs
src/components/: About.css  About.tsx  Dashboard.css  Dashboard.tsx  Favorites.css  Favorites.tsx  Help.css  Help.tsx  History.css  History.tsx  Search.css  Search.tsx  Settings.css  Settings.tsx  Sidebar.css  Sidebar.tsx
src/config/: version.ts
src/context/: ThemeContext.tsx
src/styles/: theme.css
src/tools/: index.ts
src/tools/audio/components/: AudioInfo.tsx
src/tools/avatar/components/: AvatarGenerator.tsx
src/tools/bmi/components/: BMICalculator.css  BMICalculator.tsx
src/tools/calculator/components/: Calculator.css  Calculator.tsx
src/tools/calendar/components/: Calendar.css  Calendar.tsx
src/tools/colorpicker/components/: ColorPicker.tsx
src/tools/common/: ToolStyles.css
src/tools/converter/components/: Converter.css  Converter.tsx
src/tools/crypto/components/: CryptoTool.css  CryptoTool.tsx
src/tools/currency/components/: CurrencyConverter.tsx
src/tools/document/components/: DocumentConverter.tsx
src/tools/gif/components/: GIFExtractor.tsx  GIFMaker.tsx
src/tools/htmlescape/components/: HTMLEscape.css  HTMLEscape.tsx
src/tools/image/components/: ImageCompressor.tsx  (+1 more)
src/tools/json/: types.ts
src/types/: index.ts
src/utils/: jsonUtils.ts
(+22 files in other folders)
