[package]
name = "tools-one"
version = "1.0.4"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tools_one_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
cipher = "0.4"
rsa = "0.9"
sha2 = "0.10"
md5 = "0.7"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
urlencoding = "2.1"
p256 = { version = "0.13", features = ["ecdh", "ecdsa", "pkcs8", "pem"] }

